--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
     "author": "Didit Tech <developers@didit.com>"
-  , "name": "selenium"
+  , "name": "selenium-server"
   , "description": "Selenium in an npm package"
-  , "version": "2.20.0"
-  , "homepage": "http://github.com/didit-tech/NPM-Selenium"
-  , "repository": { "type": "git", "url": "git://github.com/didit-tech/NPM-Selenium.git" }
-  , "engines": { "node": "> 0.4.x" }
-  , "keywords": ["bdd", "tdd", "selenium"]
+  , "version": "2.33.0"
+  , "keywords": ["bdd", "tdd", "selenium", "server", "standalone", "testing"]
   , "bin": { "selenium": "./bin/selenium" }
-  , "preferGlobal": true
 }
