--- a/package.json
+++ b/package.json
@@ -1,8 +1,26 @@
 {
-    "author": "Didit Tech <developers@didit.com>"
-  , "name": "selenium-server"
-  , "description": "Selenium in an npm package"
-  , "version": "2.33.0"
-  , "keywords": ["bdd", "tdd", "selenium", "server", "standalone", "testing"]
-  , "bin": { "selenium": "./bin/selenium" }
+  "author": "Didit Tech <developers@didit.com>",
+  "name": "selenium-server",
+  "description": "Selenium in an npm package",
+  "version": "2.33.0",
+  "keywords": [
+    "bdd",
+    "tdd",
+    "selenium",
+    "server",
+    "standalone",
+    "testing"
+  ],
+  "bin": {
+    "selenium": "./bin/selenium"
+  },
+  "readmeFilename": "README.md",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/eugeneware/selenium-server.git"
+  },
+  "license": "BSD"
 }
