--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "author": "Didit Tech <developers@didit.com>",
+  "contributors": [ "Eugene Ware <eugene@noblesamurai.com>" ],
   "name": "selenium-server",
   "description": "Selenium in an npm package",
   "version": "2.33.0",
