--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "author": "Didit Tech <developers@didit.com>",
-  "contributors": [ "Eugene Ware <eugene@noblesamurai.com>" ],
+  "contributors": [
+    "Eugene Ware <eugene@noblesamurai.com>"
+  ],
   "name": "selenium-server",
   "description": "Selenium in an npm package",
-  "version": "2.33.0",
+  "version": "2.34.0",
   "keywords": [
     "bdd",
     "tdd",
