--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "author": "Didit Tech <developers@didit.com>",
   "contributors": [
     "Eugene Ware <eugene@noblesamurai.com>",
-    "Dariusz Siedlecki <datrio@gmail.com>"
+    "Dariusz Siedlecki <datrio@gmail.com>",
+    "Artemy Tregubenko <me@arty.name>"
   ],
   "name": "selenium-server",
   "description": "Selenium in an npm package",
-  "version": "2.38.0",
+  "version": "2.42.2",
   "keywords": [
     "bdd",
     "tdd",
