--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "contributors": [
     "Eugene Ware <eugene@noblesamurai.com>",
     "Dariusz Siedlecki <datrio@gmail.com>",
-    "Artemy Tregubenko <me@arty.name>"
+    "Artemy Tregubenko <me@arty.name>",
+    "Igor Muchychka <mucsi_96@yahoo.com>"
   ],
   "name": "selenium-server",
   "description": "Selenium in an npm package",
-  "version": "2.48.2",
+  "version": "2.48.3",
   "keywords": [
     "bdd",
     "tdd",
